--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+
+/* Your CSS Code here. */
+.holder{
+	display:flex;
+	justify-content:center;
+
+}
+
+.item-1{
+	width:90px;
+	height:90px;
+	background-color:red;
+}
